# hackernel

./: .gitignore  Makefile  README.md  auto-build
.github/: dependabot.yml
.github/workflows/: pull-request-check.yml
app/: handler.h  main.cpp  netlink.c
apps/: .gitignore  Makefile  README.md  go.mod  go.sum
apps/cmd/notify/: main.go
apps/cmd/sample/: main.go  uranus-sample
apps/cmd/telegram/: main.go
apps/cmd/web/: main.go
apps/configs/: notify.yaml  telegram.yaml  web.yaml
apps/init/: hackernel-notify.service  hackernel-telegram.service  hackernel-web.service
apps/internal/common/: common.go
apps/internal/config/: config.go
apps/internal/notify/: notify.go
apps/scripts/: build.sh  clean.sh
core/: .gitignore  README.md
core/kernel-space/: dkms.conf
core/user-space/: .clang-format
docs/: CNAME  _config.yml  api.md  design.md  index.md  prepare.md
driver/: Makefile  README.md  core.c  file.c  file.h  fperm.c  fperm.h  netlink.c  netlink.h  perm.c  perm.h  process.c  process.h  sys_execve.c  sys_open.c  sys_open.h  syscall.c  syscall.h  util.c  util.h
kernel-space/: Makefile  comlayer.c  comlayer.h  core.c  dkms.conf  file.c  file.h  net.c  net.h  netlink.c  netlink.h  process.c  process.h  syscall.c  syscall.h  util.c  util.h
kernel-space/base/: main.c  netlink.c  syscall.c  util.c  watchdog.c
kernel-space/file/: core.c  netlink.c  utils.c  utils.h
kernel-space/hackernel/: file.h  handshake.h  log.h  net.h  netlink.h  process.h  syscall.h  util.h  watchdog.h
kernel-space/handshake/: core.c  netlink.c
kernel-space/include/: define.h  file.h  handshake.h  net.h  netlink.h  process.h  syscall.h  util.h  watchdog.h
kernel-space/net/: core.c  netlink.c
kernel-space/process/: core.c  netlink.c  utils.c  utils.h
kernel-space/watchdog/: api.h  core.c  watchdog.c
lkm/: file.c  perm.c  process.c  process.h  syscall.c  util.c  util.h
module/: Makefile  core.c  hackernel.c  log.h  netlink.c  netlink.h  sys_execve.c  sys_execve.h  syscall.c  syscall.h  util.c  util.h
package/archlinux/: PKGBUILD
package/gentoo/: hackernel.ebuild  tellus-9999.ebuild
scripts/: arch-build.sh  arch-install.sh  build.sh  clean.sh  done.sh  install.sh  uninstall.sh  update-submodule.sh
scripts/logrotate/: hackernel
scripts/modules-load/: hackernel.conf
scripts/systemd/: hackernel.service
service/: .clang-format  CMakeLists.txt  README  command.h  file.cpp  handler.cpp  handler.h  handshake.cpp  main.cpp  netlink.c  netlink.h  process.cpp  syscall.c  syscall.cpp  syscall.h  util.cpp  util.h
user-space/: .clang-format  CMakeLists.txt  README  README.md  broadcaster.h  command.h  file.cc  file.cpp  hackernel.service  handler.cc  handler.cpp  handler.h  handshake.cc  handshake.cpp  main.cc  main.cpp  net.cc  net.cpp  netlink.c  netlink.h  process.cc  process.cpp  util.cc  util.cpp  util.h
user-space/dispatcher/: CMakeLists.txt  dispatcher.cc  handler.cc  handler.h
user-space/exclusive/: CMakeLists.txt  handler.cc  handshake.cc  heartbeat.cc  send.cc
user-space/file/: audit.cc  audit.h  comm.cc  define.h  handler.cc  protector.cc  protector.h  recv.cc  send.cc
user-space/hackernel/: broadcaster.h  dispatcher.h  file.h  heartbeat.h  ipc.h  json.h  lru.h  net.h  osinfo.h  process.h  thread.h  threads.h  timer.h  util.h
user-space/heartbeat/: comm.cc  define.h  recv.cc  send.cc
user-space/hknl/: CMakeLists.txt  netlink.c  netlink.h  wrapper.cc  wrapper.h
user-space/include/: broadcaster.h  exclusive.h  file.h  ipc.h  keepalive.h  net.h  netlink.h  process.h  util.h  wrapper.h
user-space/ipc/: CMakeLists.txt  handler.cc  handler.h  server.cc  server.h  session.cc
user-space/keepalive/: CMakeLists.txt  recv.cc  send.cc
user-space/net/: comm.cc  define.h  net.cc  recv.cc  send.cc
user-space/netlink/: CMakeLists.txt  netlink.c  wrapper.cc
user-space/nlc/: CMakeLists.txt  README.md  netlink.c  netlink.h  wrapper.cc  wrapper.h
user-space/process/: audit.cc  audit.h  comm.cc  define.h  process.cc  protector.cc  protector.h  recv.cc  send.cc
user-space/util/: CMakeLists.txt  broadcaster.cc  json.cc  lkm.cc  osinfo.cc  thread.cc  threads.cc  timer.cc
webui/: .env.development  .env.production  README.md  index.html  package-lock.json  package.json  vitest.config.ts
webui/src/: App.vue
(+73 files in other folders)
